# PROJ_MACHINE_LEARNING

./: README.md  app.py  requirements.txt  testes.ipynb
PROJETO-MACHINE/: README.md  app.py  pyproject.toml
